--- a/app/views/things/_actions.html.erb
+++ b/app/views/things/_actions.html.erb
@@ -2,9 +2,9 @@
   <%= icon(icon_marked, '', class: thing.marked ? "dimmed marked" : "dimmed") %>
 <% end %>
 <%= link_to(edit_thing_path(thing, ref: CGI::escape(request.fullpath)), title: "Edit #{thing.name}", class: 'a-edit-thing') do %>
-  <%= icon(icon_edit, '', class: 'primary') %>
+  <%= icon(icon_edit, '', class: 'success') %>
 <% end %>
 <%= link_to(new_thing_path(parent_id: thing, ref: CGI::escape(request.fullpath)), title: 'Add Contained Thing',
       class: 'a-new-thing') do %>
-  <%= icon(icon_add, '', class: "success") %>
+  <%= icon(icon_add, '', class: "primary") %>
 <% end %>
