--- a/app/assets/stylesheets/things.css.scss
+++ b/app/assets/stylesheets/things.css.scss
@@ -118,3 +118,21 @@ ul.jqtree-tree li.jqtree-selected > .jqtree-element:hover {
 .jqtree-element.current {
   background: #ded;
 }
+
+#tags {
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    li {
+      display: inline-block;
+      border: 1px solid #C7C7C7;
+      padding: 0.3em;
+      line-height: 0.9em;
+      font-size: 0.8em;
+      background: #FFE4D3;
+      border-radius: 0.4em;
+      color: #888;
+    }
+  }
+}
