--- a/app/assets/stylesheets/things.css.scss
+++ b/app/assets/stylesheets/things.css.scss
@@ -133,6 +133,18 @@ ul.jqtree-tree li.jqtree-selected > .jqtree-element:hover {
       background: #FFE4D3;
       border-radius: 0.4em;
       color: #888;
+      border-top-left-radius: 0.4em;
+      border-bottom-left-radius: 1em;
+      // padding-left: 0.8em;
+      span {
+        color: #fff;
+        font-size: 1.3em;
+        line-height: 0.4em;
+        padding: 0 0.2em;
+        position: relative;
+        top: 0.1em;
+        text-shadow: 0 0 1px #888;
+      }
     }
   }
 }
