--- a/app/assets/stylesheets/things.css.scss
+++ b/app/assets/stylesheets/things.css.scss
@@ -140,10 +140,10 @@ ul.jqtree-tree li.jqtree-selected > .jqtree-element:hover {
         color: #fff;
         font-size: 1.3em;
         line-height: 0.4em;
-        padding: 0 0.2em;
+        padding: 0 0.2em 0 0.1em;
         position: relative;
         top: 0.1em;
-        text-shadow: 0 0 1px #888;
+        text-shadow: 0 0 1px #000;
       }
     }
   }
