--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,42 +1,53 @@
-<h1>Tags</h1>
+<div class="row">
+  <div class="col-md-4">
+    <div id="tags-heading">
+      <h2>Tags</h2>
 
-<%= form_for(@tag) do |f| %>
-  <% if @tag.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@tag.errors.count, "error") %> prohibited this tag from being saved:</h2>
+      <%= form_for(@tag) do |f| %>
+        <% if @tag.errors.any? %>
+          <div id="error_explanation">
+            <h2><%= pluralize(@tag.errors.count, "error") %> prohibited this tag from being saved:</h2>
 
-      <ul>
-      <% @tag.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+            <ul>
+            <% @tag.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+            </ul>
+          </div>
+        <% end %>
+
+        <div class="form-group">
+          <%= f.text_field :name %>
+          <%= f.submit "New", class: "btn btn-xs btn-primary" %>
+        </div>
+        <%= yield :tag_form %>
+
       <% end %>
-      </ul>
     </div>
-  <% end %>
+    <table class="table table-striped table-responsive">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th colspan="2"></th>
+        </tr>
+      </thead>
 
-  <div class="form-group">
-    <%= f.text_field :name %>
-    <%= f.submit %>
+      <tbody>
+        <% @tags.each do |tag| %>
+          <tr>
+            <td><%= link_to things_path(tags: tag.name) do %> <%= tag.name %> <span class='c-count'><%=tag.things.count%></span><% end %></td>
+            <td><%= link_to 'Edit', edit_tag_path(tag) %></td>
+            <td><%= link_to 'Destroy', tag, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
   </div>
-  <%= yield :tag_form %>
+  <div class="col-md-4">
+    <div id="tree" data-url="/things/tree.json?current=<%= Thing.world.id %>"></div>
+  </div>
+  <div class="col-md-4">
+    <%= render :partial=>'things/quick_search' %>
+  </div>
 
-<% end %>
-
-
-<table class="table table-striped table-responsive">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="2"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @tags.each do |tag| %>
-      <tr>
-        <td><%= link_to things_path(query: tag.name) do %> <%= tag.name %> <span class='c-count'><%=tag.things.count%></span><% end %></td>
-        <td><%= link_to 'Edit', edit_tag_path(tag) %></td>
-        <td><%= link_to 'Destroy', tag, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+</div>
