--- a/app/views/things/index.html.erb
+++ b/app/views/things/index.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="things col-md-4">
-    <% if params[:query].present? %>
-    <h4>Matching '<%= params[:query] %>'</h2>
+    <% if @search %>
+    <h4>Matching <%= @tag_list ? "tags: '#{@tag_list}'" : "name: '#{params[:query]}'" %></h4>
     <% end %>
     <div id="things-list">
     <% @things.each do |thing| %>
