Change move icon

--- a/app/views/things/_actions.html.erb
+++ b/app/views/things/_actions.html.erb
@@ -2,7 +2,7 @@
   <%= icon(icon_marked, '', class: thing.marked ? "dimmed marked" : "dimmed") %>
 <% end %>
 <%= link_to(move_to_thing_path(thing), title: 'Move To Selected', class: 'a-move-thing', :"data-id" => thing.id) do %>
-  <%= icon('arrow-right', '', class: "success") %>
+  <%= icon(icon_move, '', class: "success") %>
 <% end %>
 <% if false %>
   <%= link_to(edit_thing_path(thing, ref: CGI::escape(request.fullpath)), title: "Edit #{thing.name}", class: 'a-edit-thing') do %>
