--- a/app/views/things/show.html.erb
+++ b/app/views/things/show.html.erb
@@ -13,7 +13,7 @@
           </span>
           <span class="action">
             <%= link_to(move_to_thing_path(@thing), title: 'Move To Selected', class: 'a-move-thing', :"data-id" => @thing.id) do %>
-              <%= icon('arrow-right', '', class: "success") %>
+              <%= icon(icon_move, '', class: "success") %>
             <% end %>
           </span>
           <span class="action">
