--- a/app/views/things/_thing_row.html.erb
+++ b/app/views/things/_thing_row.html.erb
@@ -2,8 +2,7 @@
   <a href="<%= url_for(thing) %>" title="<%= thing.description %>"><%= thing.name %></a> <span class="num-contained c-count" title="number of contained things"><%= thing.num_contained %></span>
   <% if defined?(show_container) && show_container %>
     <% if thing.parent_id && thing.container && thing.container.tree_depth > 0 %> <
-      <a href="<%= url_for(thing.container) %>" title="<%= thing.container.description %>"><%= thing.container.name %></a> <span class="num-contained" title="number of contained things">(<%= thing.container.num_contained %>)</span>
-    <% else %>
+      <a href="<%= url_for(thing.container) %>" title="<%= thing.container.description %>"><%= thing.container.name %></a> <span class="num-contained c-count" title="number of contained things"><%= thing.container.num_contained %></span>
     <% end -%>
   <% end -%>
   <span class="actions action">
