--- a/app/views/things/show.html.erb
+++ b/app/views/things/show.html.erb
@@ -1,73 +1,5 @@
 <div class="row">
-  <div class="thing col-md-4">
-    <div class="thing-heading">
-      <div class="name-bar">
-        <%= link_to(edit_thing_path(@thing, ref: CGI::escape(request.fullpath)), title: "Edit #{@thing.name}",
-            class: "name a-edit-thing") do %>
-          <%=h @thing.name %><% end %>
-        <div class="actions op50">
-          <span id="marked" class="action">
-            <%= link_to(toggle_marked_thing_path(@thing), title: 'Toggle Marked', class: "#{@thing.id}_marked", remote: true, data: {type: 'script'}) do %>
-              <%= icon(icon_marked, '', class: @thing.marked ? "dimmed marked" : "dimmed") %>
-            <% end %>
-          </span>
-          <span class="action">
-            <%= link_to(move_to_thing_path(@thing), title: 'Move To Selected', class: 'a-move-thing', :"data-id" => @thing.id) do %>
-              <%= icon(icon_move, '', class: "success") %>
-            <% end %>
-          </span>
-          <span class="action">
-            <%= link_to(new_thing_path(parent_id: @thing, ref: CGI::escape(request.fullpath)), title: 'Add Contained Thing', class: 'a-new-thing') do %>
-              <%= icon(icon_add, '', class: "primary") %>
-            <% end %>
-          </span>
-        </div>
-      </div>
-
-      <div id="container">
-        <% parent = @thing.container %>
-        <% if parent %>
-          <div id="path">
-            <% while parent && parent.tree_depth > 0%>
-            < <a href='<%=url_for(parent)%>'><%=parent.name%></a>
-            <% parent = parent.container %>
-            <% end %>
-          </div>
-        <% else %>
-          <b>No container</b>
-        <% end -%>
-      </div>
-
-      <div id="tags">
-        <ul><% @thing.tags.order(:name).each do |tag| %>
-          <li><span>•</span><%= tag.name %></li><% end %>
-        </ul>
-      </div>
-
-      <div id="description">
-        <%=h @thing.description %>
-      </div>
-
-    </div>
-    <div class="thing-body">
-      <div id="contained">
-        <div id="header">
-          <div id="toolbar">
-          </div>
-        </div>
-        <div id="things-list" class="">
-          <% if !@thing.contained.blank? %>
-            <% @thing.contained.each do |thing| %>
-              <%= render :partial=>'thing_row', locals: {thing: thing, odd_even: (cycle("odd","even"))} %>
-            <% end -%>
-          <% else %>
-            <span id="nothing">Does not contain anything.</span>
-          <% end -%>
-        </div>
-      </div>
-
-    </div>
-
+  <div id="thing-show" class="thing col-md-4 raj-loader" data-raj-url="<%= thing_path(@thing) %>">
   </div>
   <div class="col-md-4">
     <div id="tree" data-url="/things/tree.json?current=<%= @thing.id %>"></div>
