--- a/app/assets/stylesheets/things.css.scss
+++ b/app/assets/stylesheets/things.css.scss
@@ -145,3 +145,7 @@ ul.jqtree-tree li.jqtree-selected > .jqtree-element:hover {
     }
   }
 }
+
+#inline-widget input.select2-input {
+  min-width: 200px;
+}
