--- a/app/views/things/index.html.erb
+++ b/app/views/things/index.html.erb
@@ -3,7 +3,8 @@
     data-raj-params='<%=
       {
         query: params[:query],
-        tags: params[:tags]
+        tags: params[:tags],
+        search_tags: params[:search_tags]
       }.to_json
     %>'>
   </div>
