--- a/app/views/things/index.html.erb
+++ b/app/views/things/index.html.erb
@@ -1,11 +1,12 @@
 <div class="row">
   <div id="thing-index" class="things col-md-4 raj-loader" data-raj-url="<%= things_path %>"
     data-raj-params='<%=
-      {
+      data = {
         query: params[:query],
         tags: params[:tags],
-        search_tags: params[:search_tags]
-      }.to_json
+      }
+      data[:search_tags] = true if params[:search_tags]
+      data.to_json
     %>'>
   </div>
   <div class="col-md-4">
