--- a/app/views/things/_form.html.erb
+++ b/app/views/things/_form.html.erb
@@ -49,10 +49,12 @@
       <%= f.text_field :cost, class: "form-control" %>
     </div>
   </div>
-  <div class="form-group">
-    <%= f.label :value, class: "col-lg-3 control-label" %>
-    <div class="col-lg-9">
-      <%= f.text_field :value, class: "form-control" %>
+  <% if false %>
+    <div class="form-group">
+      <%= f.label :value, class: "col-lg-3 control-label" %>
+      <div class="col-lg-9">
+        <%= f.text_field :value, class: "form-control" %>
+      </div>
     </div>
-  </div>
+  <% end %>
 </div>
