--- a/app/assets/stylesheets/things.css.scss
+++ b/app/assets/stylesheets/things.css.scss
@@ -119,6 +119,29 @@ ul.jqtree-tree li.jqtree-selected > .jqtree-element:hover {
   background: #ded;
 }
 
+%tag {
+  display: inline-block;
+  border: 1px solid #C7C7C7;
+  padding: 0.3em;
+  line-height: 0.9em;
+  font-size: 0.8em;
+  background: #FFE4D3;
+  border-radius: 0.4em;
+  color: #888;
+  a {
+    color: inherit
+  }
+  span {
+    color: #fff;
+    font-size: 1.3em;
+    line-height: 0.4em;
+    padding: 0 0.2em 0 0.1em;
+    position: relative;
+    top: 0.1em;
+    text-shadow: 0 0 1px #000;
+  }
+}
+
 #tags {
   ul {
     list-style-type: none;
@@ -126,26 +149,20 @@ ul.jqtree-tree li.jqtree-selected > .jqtree-element:hover {
     padding: 0;
     li {
       display: inline-block;
-      border: 1px solid #C7C7C7;
-      padding: 0.3em;
-      line-height: 0.9em;
-      font-size: 0.8em;
-      background: #FFE4D3;
-      border-radius: 0.4em;
-      color: #888;
-      span {
-        color: #fff;
-        font-size: 1.3em;
-        line-height: 0.4em;
-        padding: 0 0.2em 0 0.1em;
-        position: relative;
-        top: 0.1em;
-        text-shadow: 0 0 1px #000;
-      }
+      @extend %tag;
     }
   }
 }
 
 #inline-widget input.select2-input {
   min-width: 200px;
+}
+
+#recent-searches {
+  ul {
+    list-style-type: none;
+  }
+  li.tag {
+    @extend %tag;
+  }
 }
