--- a/app/assets/stylesheets/things.css.scss
+++ b/app/assets/stylesheets/things.css.scss
@@ -111,7 +111,7 @@ ul.jqtree-tree li.jqtree-selected > .jqtree-element:hover {
 }
 
 .thing-body, #tree {
-  font-size: 18px;
+  font-size: 1em;
 }
 
 // Tree compass
