--- a/app/assets/stylesheets/things.css.scss
+++ b/app/assets/stylesheets/things.css.scss
@@ -25,7 +25,7 @@
       color: #aaa;
       background: transparent;
     }
-    .actions {
+    .thing-actions {
       float: right;
       position: relative;
       // top: 0.1em;
@@ -91,7 +91,7 @@
   top: -0.1em;
 }
 
-em.actions {
+em.thing-actions {
   // margin-left: 0.2em;
   background: #FFF;
   padding: 0px 4px;
