--- a/app/views/things/_thing_row.html.erb
+++ b/app/views/things/_thing_row.html.erb
@@ -11,4 +11,7 @@
   <span class="thing-actions action">
     <%= render partial: "things/actions", locals: {thing: thing} %>
   </span>
+  <span class="show-actions">
+    <a href="#"><%= icon('bars') %></a>
+  </span>
 </div>
