--- a/app/assets/stylesheets/things.css.scss
+++ b/app/assets/stylesheets/things.css.scss
@@ -25,7 +25,7 @@
       color: #aaa;
       background: transparent;
     }
-    .thing-actions {
+    .thing-actions, .show-actions {
       float: right;
       position: relative;
       // top: 0.1em;
@@ -91,7 +91,7 @@
   top: -0.1em;
 }
 
-em.thing-actions {
+em.thing-actions, em.show-actions {
   // margin-left: 0.2em;
   background: #FFF;
   padding: 0px 4px;
@@ -164,5 +164,24 @@ ul.jqtree-tree li.jqtree-selected > .jqtree-element:hover {
   }
   li.tag {
     @extend %tag;
+  }
+}
+
+.thing-actions {
+  display: none;
+}
+
+@media (min-width: 1200px) {
+  .thing-actions {
+    display: block;
+  }
+  .show-actions {
+    display: none;
+  }
+}
+
+.show-actions {
+  a {
+    color: #888;
   }
 }
