Fix color styling on selected tree node

--- a/app/assets/stylesheets/things.css.scss
+++ b/app/assets/stylesheets/things.css.scss
@@ -93,7 +93,7 @@
 
 em.thing-actions, em.show-actions {
   // margin-left: 0.2em;
-  background: #FFF;
+  // background: #FFF;
   padding: 0px 4px;
   border-radius: 4px;
   float: right;
@@ -116,7 +116,7 @@ ul.jqtree-tree li.jqtree-selected > .jqtree-element:hover {
 
 // Tree compass
 .jqtree-element.current {
-  background: #ded;
+  background: #ddeee5;
 }
 
 %tag {
