--- a/app/views/things/_actions.html.erb
+++ b/app/views/things/_actions.html.erb
@@ -1,15 +1,13 @@
-<%= link_to(toggle_marked_thing_path(thing), title: 'Toggle Marked', class: "#{thing.id}_marked", remote: true) do %>
-  <%= icon(icon_marked, '', class: thing.marked ? "dimmed marked" : "dimmed") %>
+<%= link_to(edit_thing_path(thing, ref: CGI::escape(request.fullpath)), title: "Edit #{thing.name}", class: 'a-edit-thing') do %>
+  <%= icon(icon_edit, '', class: 'default') %>
 <% end %>
 <%= link_to(move_to_thing_path(thing), title: 'Move To Selected', class: 'a-move-thing', :"data-id" => thing.id) do %>
-  <%= icon(icon_move, '', class: "success") %>
-<% end %>
-<% if false %>
-  <%= link_to(edit_thing_path(thing, ref: CGI::escape(request.fullpath)), title: "Edit #{thing.name}", class: 'a-edit-thing') do %>
-    <%= icon(icon_edit, '', class: 'success') %>
-  <% end %>
+  <%= icon(icon_move, '', class: "warning") %>
 <% end %>
 <%= link_to(new_thing_path(parent_id: thing, ref: CGI::escape(request.fullpath)), title: 'Add Contained Thing',
       class: 'a-new-thing') do %>
   <%= icon(icon_add, '', class: "primary") %>
+<% end %>
+<%= link_to(toggle_marked_thing_path(thing), title: 'Toggle Marked', class: "#{thing.id}_marked", remote: true) do %>
+  <%= icon(icon_marked, '', class: thing.marked ? "dimmed marked" : "dimmed") %>
 <% end %>
