--- a/app/assets/javascripts/things.js.coffee.erb
+++ b/app/assets/javascripts/things.js.coffee.erb
@@ -85,7 +85,7 @@ class _Things
 
   updateValues: (data) ->
 
-$(document).on "page:change", ->
+$(document).on "ready page:load", ->
   window.inlineWidget = new InlineWidget
   el_selector = '#quick-search > form input[name="query"]'
   $(el_selector).autoWordComplete()
