--- a/app/assets/stylesheets/things.css.scss
+++ b/app/assets/stylesheets/things.css.scss
@@ -11,7 +11,10 @@
   // width: 400px;
   border: 2px solid #888;
   padding: 0px;
-  min-height: 400px;
+  min-height: 22em;
+  max-height: 30em;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
   // max-height: 400px;
   overflow: auto;
   background: #ddd;
