--- a/app/views/marked_things/index.html.erb
+++ b/app/views/marked_things/index.html.erb
@@ -8,10 +8,10 @@
         title: "Unselect All", class: "btn btn-warning btn-sm a-clear-marked"}
       (link_options[:disabled] = 'disabled') if @things.empty?
       link_to "Clear", clear_marked_things_path, link_options %>
-      <%= link_options = {data: {confirm: "Are you sure you want to destroy all selected objects?"},
-        title: "Destroy Selected", class: "btn btn-danger btn-sm a-destroy-marked"}
+      <%= link_options = {data: {confirm: "Are you sure you want to delete all selected objects?"},
+        title: "Del Selected", class: "btn btn-danger btn-sm a-destroy-marked"}
       (link_options[:disabled] = 'disabled') if @things.empty?
-      link_to "Destroy", destroy_marked_things_path, link_options %>
+      link_to "Del", destroy_marked_things_path, link_options %>
     </div>
     <div id="tree" data-url="/things/tree.json?current=<%= Thing.world.id %>"></div>
   </div>
