--- a/app/views/things/_thing_index.html.erb
+++ b/app/views/things/_thing_index.html.erb
@@ -1,14 +1,16 @@
-<% if @search %>
-<h4><% if @marked_things_only %>
-  <span class="d-marked-count"><%= @things.count %></span> things are marked.
-  <% else %>
-    <%= @things.count %> <%= "marked" if params[:marked_only] %>
-    found, matching <%= params[:search_tags] ? "tags" : "name" %>: '<%= @query || "*" %>'
+<% cache(things_query_cache_key(params)) do %>
+  <% if @search %>
+  <h4><% if @marked_things_only %>
+    <span class="d-marked-count"><%= @things.count %></span> things are marked.
+    <% else %>
+      <%= @things.count %> <%= "marked" if params[:marked_only] %>
+      found, <%= params[:search_tags] ? "with tags" : "matching" %>: '<%= @query || "*" %>'
+    <% end %>
+  <% end %></h4>
+  <div id="things-list">
+  <% @things.each do |thing| %>
+    <%= render :partial=>'thing_row', locals: {thing: thing, odd_even: (cycle("odd","even")), show_container:  true} %>
   <% end %>
-<% end %></h4>
-<div id="things-list">
-<% @things.each do |thing| %>
-  <%= render :partial=>'thing_row', locals: {thing: thing, odd_even: (cycle("odd","even")), show_container:  true} %>
+  </div>
+  <br />
 <% end %>
-</div>
-<br />
